<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 Christopher C. Thi
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">LoLStorm</string>

    <string name="summoner_search_title">Search</string>
    <string name="summoner_champions_title">Champions</string>
    <string name="region_title">Region</string>
    <string name="about_title">About</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="error_internet_connection">Please check your internet connection.</string>
    <string name="error_summoner_not_found">The summoner was not found.</string>
    <string name="error_data_not_found">No info was found.</string>
    <string name="error_server_failure">There was a problem connecting to the server.</string>
    <string name="error_app_update">Please update LoLStorm.</string>
    <string name="error_app_unknown">Unknown error.</string>

    <string name="header_summoner_search_title">Search</string>

    <!-- Summoner Search Fragment -->
    <string name="player_updated">Your favorite player has been updated.</string>

    <!-- String Arrays -->
    <string-array name="player_pager_items">
        <item>SUMMARY</item>
        <item>CHAMPIONS</item>
        <item>LEAGUES</item>
    </string-array>

    <!-- About -->
    <string name="about_app_disclaimer">LoL Storm is free, ad free, and ONLY distributed on the Google Play Store. Distribution on other websites is prohibited.</string>
    <string name="about_riot_disclaimer">LoL Storm isn’t endorsed by Riot Games and doesn’t reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc."</string>
    <string name="about_open_source_libs_title">Open source libraries used:</string>

    <string-array name="open_source_libs">
        <item>com.github.bumptech.glide:glide:3.6.0</item>
        <item>de.hdodenhof:circleimageview:1.3.0</item>
        <item>com.jakewharton:butterknife:6.1.0</item>
        <item>com.squareup.retrofit:retrofit:1.9.0</item>
        <item>o.reactivex:rxandroid:0.24.0</item>
        <item>org.parceler:parceler-api:1.0.0</item>
        <item>com.readystatesoftware.sqliteasset:sqliteassethelper</item>
    </string-array>

    <!-- Menu -->
    <string name="summoner_menu_fav">Favorite</string>
    <string name="summoner_menu_remove">Remove</string>

    <!-- Region Dialog -->
    <string-array name="regions">
        <item>BR</item>
        <item>EUNE</item>
        <item>EUW</item>
        <item>KR</item>
        <item>LAN</item>
        <item>LAS</item>
        <item>NA</item>
        <item>OCE</item>
        <item>TR</item>
        <item>RUW</item>
        <item>PBE</item>
    </string-array>

</resources>
